--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -10,10 +10,12 @@
         <link rel="stylesheet" href="{{ asset('build/app.css') }}">
         <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     {% endblock %}
+    {{ encore_entry_script_tags('app') }}
     {% block javascripts %}
         <script type="text/javascript" src="{{ asset('build/app.js') }}"></script>
 
     {% endblock %}
+
 </head>
 <body>
 {% block body %}
