--- a/templates/default/index.html.twig
+++ b/templates/default/index.html.twig
@@ -3,9 +3,7 @@
 {% block title %}Baseball Club!{% endblock %}
 
 {% block body %}
-    <nav class="col s12 crumb-path">
-        <span class="breadcrumb">&nbsp; Baseball Club!</span>
-    </nav>
+    {{ parent() }}
     <div class="container">
         <div class="row">
             <div class="col s12">
