--- a/templates/header.html.twig
+++ b/templates/header.html.twig
@@ -13,3 +13,14 @@
         <li><a class="dropdown-trigger" href="#" data-target="dropdown1"><i class="material-icons right">face</i></a></li>
     </ul>
 </nav>
+
+<div class="fixed-action-btn">
+    <a class="btn-floating btn-large red">
+        <i class="large material-icons">add</i>
+    </a>
+    <ul>
+        <li><a href="{{ path('newGame') }}" class="btn-floating red"><i class="material-icons">games</i></a></li>
+        <li><a class="btn-floating blue darken-1"><i class="material-icons">directions_walk</i></a></li>
+        <li><a class="btn-floating green"><i class="material-icons">person_add</i></a></li>
+    </ul>
+</div>
