remember me (default)
Signed-off-by: Jeroen Keesom <jeroen.keesom@exsyn.com>

--- a/templates/login.html.twig
+++ b/templates/login.html.twig
@@ -55,7 +55,7 @@
                                         <div class="switch">
                                             <label>
                                                 Remember me: &nbsp; Off
-                                                <input type="checkbox" id="checkbox-1" name="_remember_me">
+                                                <input type="checkbox" id="checkbox-1" name="_remember_me" checked=checked>
                                                 <span class="lever"></span>
                                                 On
                                             </label>
