--- a/templates/header.html.twig
+++ b/templates/header.html.twig
@@ -21,6 +21,7 @@
     <ul>
         <li><a href="{{ path('newGame') }}" class="btn-floating red"><i class="material-icons">games</i></a></li>
         <li><a href="{{ path('newTraining') }}" class="btn-floating blue darken-1"><i class="material-icons">directions_walk</i></a></li>
-        <li><a class="btn-floating green"><i class="material-icons">person_add</i></a></li>
+        <li><a href="{{ path('playerEdit', {'id' : 0}) }}" class="btn-floating green"><i class="material-icons">person_add</i></a></li>
+        <li><a href="{{ path('player_overview') }}" class="btn-floating orange"><i class="material-icons">group</i></a></li>
     </ul>
 </div>
