--- a/templates/default/index.html.twig
+++ b/templates/default/index.html.twig
@@ -10,7 +10,7 @@
                 <div class="card ">
                     <div class="card-content">
                         <span class="card-title">Played Game Overview </span>
-                        <table class="striped">
+                        <table class="striped responsive-table">
                             <thead>
                             <tr>
                                 <th>Player</th>
