--- a/templates/player-overview.html.twig
+++ b/templates/player-overview.html.twig
@@ -15,7 +15,7 @@
                 <div class="card ">
                     <div class="card-content">
                         <span class="card-title">Players: </span>
-                        <table class="striped">
+                        <table class="striped responsive-table">
                             <thead>
                             <tr>
                                 <th>Name</th>
