--- a/templates/default/index.html.twig
+++ b/templates/default/index.html.twig
@@ -4,20 +4,22 @@
 
 {% block body %}
     {{ parent() }}
-    <div class="container">
+<div class="container-fluid">
         <div class="row">
             <div class="col s12">
                 <div class="card ">
                     <div class="card-content">
                         <span class="card-title">Played Game Overview </span>
-                        <table class="striped responsive-table">
+                        <table class="striped highlight responsive-table bordered">
                             <thead>
                             <tr>
                                 <th>Player</th>
-                                <th>% inning played</th>
-                                <th># games played</th>
-                                <th># games present</th>
-                                <th># innings played</th>
+                                <th>IP%</th>
+                                <th>GP#</th>
+                                <th>GPr</th>
+                                <th>IP#</th>
+                                <th>TR%</th>
+                                <th>I2T</th>
                             </tr>
                             </thead>
                             <tbody>
@@ -27,6 +29,8 @@
                                 <td> 2</td>
                                 <td> 3</td>
                                 <td> 15</td>
+                                <td> 70%</td>
+                                <td> 0.75</td>
                             </tr>
                             <tr>
                                 <td> Q #11</td>
@@ -34,6 +38,8 @@
                                 <td> 3</td>
                                 <td> 3</td>
                                 <td> 25</td>
+                                <td> 45%</td>
+                                <td> 0.45</td>
                             </tr>
                             </tbody>
                         </table>
