--- a/templates/default/index.html.twig
+++ b/templates/default/index.html.twig
@@ -23,24 +23,17 @@
                             </tr>
                             </thead>
                             <tbody>
+                            {% for key in calculatedPlayerResult %}
                             <tr>
-                                <td> Jeroen #22</td>
-                                <td><strong>85%</strong></td>
-                                <td> 2</td>
-                                <td> 3</td>
-                                <td> 15</td>
-                                <td> 70%</td>
-                                <td> 0.75</td>
+                                <td>{{ key.player.firstName }} #{{ key.player.shirtNumber }}</td>
+                                <td>{{ key.ips }} </td>
+                                <td>{{ key.gp }}</td>
+                                <td>{{ key.gpr }}</td>
+                                <td>{{ key.ipn }}</td>
+                                <td>{{ key.tr }}</td>
+                                <td>{{ key.i2t }}</td>
                             </tr>
-                            <tr>
-                                <td> Q #11</td>
-                                <td><strong>87%</strong></td>
-                                <td> 3</td>
-                                <td> 3</td>
-                                <td> 25</td>
-                                <td> 45%</td>
-                                <td> 0.45</td>
-                            </tr>
+                            {% endfor %}
                             </tbody>
                         </table>
 
