--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -68,6 +68,10 @@
                         <td>number of inning played.</td>
                     </tr>
                     <tr>
+                        <th>IA#</th>
+                        <td>number of inning available over all games present.</td>
+                    </tr>
+                    <tr>
                         <th>TR%</th>
                         <td>average training presents over last 4 weeks.</td>
                     </tr>
