--- a/templates/default/index.html.twig
+++ b/templates/default/index.html.twig
@@ -18,6 +18,7 @@
                                 <th>GP#</th>
                                 <th>GPr</th>
                                 <th>IP#</th>
+                                <th>IA#</th>
                                 <th>TR%</th>
                                 <th>I2T</th>
                             </tr>
@@ -30,6 +31,7 @@
                                 <td>{{ key.gp }}</td>
                                 <td>{{ key.gpr }}</td>
                                 <td>{{ key.ipn }}</td>
+                                <td>{{ key.ipa }}</td>
                                 <td>{{ key.tr }}</td>
                                 <td>{{ key.i2t }}</td>
                             </tr>
@@ -41,4 +43,5 @@
                 </div>
             </div>
         </div>
+</div>
 {% endblock %}
