game calculations complete
Signed-off-by: Jeroen Keesom <jeroen.keesom@exsyn.com>

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -60,8 +60,8 @@
                         <td>number of games played (player active).</td>
                     </tr>
                     <tr>
-                        <th>GPr</th>
-                        <td>number of games player was present, but might not have been playing.</td>
+                        <th>GAv</th>
+                        <td>number of games player was present(available on couch), but might not have been playing.</td>
                     </tr>
                     <tr>
                         <th>IP#</th>
