--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -73,7 +73,7 @@
                     </tr>
                     <tr>
                         <th>TR%</th>
-                        <td>average training presents over last 4 weeks.</td>
+                        <td>average training presents.</td>
                     </tr>
                     <tr>
                         <th>I2T</th>
