training - inning ratio introduction
Signed-off-by: Jeroen Keesom <jeroen.keesom@exsyn.com>

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -57,27 +57,27 @@
                     </tr>
                     <tr>
                         <th>GP#</th>
-                        <td>number of games played (player active).</td>
+                        <td>(Games Played) number of games played (player active).</td>
                     </tr>
                     <tr>
                         <th>GAv</th>
-                        <td>number of games player was present(available on couch), but might not have been playing.</td>
+                        <td>(Games Available) number of games player was present(available on couch), but might not have been playing.</td>
                     </tr>
                     <tr>
                         <th>IP#</th>
-                        <td>number of inning played.</td>
+                        <td>(Innings played) number of inning played.</td>
                     </tr>
                     <tr>
                         <th>IA#</th>
-                        <td>number of inning available over all games present.</td>
+                        <td>(Innings Available) number of inning available over all games where player was present.</td>
                     </tr>
                     <tr>
                         <th>TR%</th>
-                        <td>average training presents.</td>
+                        <td>(Training presence) average training presents.</td>
                     </tr>
                     <tr>
                         <th>I2T</th>
-                        <td>number of inning vs the number of trainings present expressed in a ratio number.</td>
+                        <td>(Innings VS training) to have a fair ratio of training vs game inning played you should aim for a number 1, where below 1 should mean less playing, and above means more playing.</td>
                     </tr>
                     </tbody>
                 </table>
