--- a/templates/default/index.html.twig
+++ b/templates/default/index.html.twig
@@ -9,7 +9,7 @@
             <div class="col s12">
                 <div class="card ">
                     <div class="card-content">
-                        <span class="card-title">Played Game Overview </span>
+                        <span class="card-title">Team Statistics </span>
                         <table class="striped highlight responsive-table bordered">
                             <thead>
                             <tr>
