--- a/templates/default/index.html.twig
+++ b/templates/default/index.html.twig
@@ -5,6 +5,16 @@
 {% block body %}
     {{ parent() }}
 <div class="container-fluid">
+    <div class="row">
+        <div class="col s12">
+            <div class="card ">
+                <div class="card-content">
+                    Last <strong>Training</strong> entered: <strong>{{ lastTraining.date |date("d/m/Y") }}</strong> <br/>
+                    Last <strong>Game</strong> entered: <strong>{{ lastGame.date |date("d/m/Y") }}</strong>
+                </div>
+            </div>
+        </div>
+    </div>
         <div class="row">
             <div class="col s12">
                 <div class="card ">
