--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -107,6 +107,7 @@
                 <li><a href="{{ path('newTraining') }}" class="btn-floating blue darken-1"><i class="material-icons">directions_walk</i></a></li>
                 <li><a href="{{ path('playerEdit', {'id' : 0}) }}" class="btn-floating green"><i class="material-icons">person_add</i></a></li>
                 <li><a href="{{ path('player_overview') }}" class="btn-floating orange"><i class="material-icons">group</i></a></li>
+                <li><a href="{{ path('overview') }}" class="btn-floating teal"><i class="material-icons">visibility</i></a></li>
             </ul>
         </div>
     {% endif %}
